[metadata]
name = InterfaceTools
version = 1.0.2
author = Leviathan-CE
author_email = LeviathanCE@outlook.com
description = interface class decorator behavoiur
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Leviathan-CE/InterfaceTools
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://github.com/Leviathan-CE/InterfaceTools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tools
packages = find:
python_requires = >=3.11

[options.packages.find]
where = tools